--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\Acer\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
-j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
-user.properties.file=C:\\Users\\Acer\\AppData\\Roaming\\NetBeans\\17\\build.properties
+deploy.ant.properties.file=C:\\Users\\Administrator\\AppData\\Roaming\\NetBeans\\17\\config\\GlassFishEE6\\Properties\\gfv343053827.properties
+j2ee.platform.is.jsr109=true
+j2ee.server.domain=C:/Users/Administrator/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/Administrator/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\Administrator\\GlassFish_Server\\glassfish;C:\\Users\\Administrator\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv700ee10:localhost:4848
+j2ee.server.middleware=C:/Users/Administrator/GlassFish_Server
+user.properties.file=C:\\Users\\Administrator\\AppData\\Roaming\\NetBeans\\17\\build.properties
