add ListRequest for Mentee

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,12 +27,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.jakarta.activation-api-2.0.1.jar=C:\\Users\\Acer\\Downloads\\lib\\lib\\jakarta.activation-api-2.0.1.jar
-file.reference.jakarta.mail-api-2.0.1.jar=C:\\Users\\Acer\\Downloads\\lib\\lib\\jakarta.mail-api-2.0.1.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\Acer\\Downloads\\lib\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\Acer\\Downloads\\lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jaxb-api-2.1.jar=C:\\Users\\Acer\\Downloads\\lib\\lib\\jaxb-api-2.1.jar
-file.reference.sqljdbc42.jar=C:\\Users\\Acer\\Downloads\\lib\\lib\\sqljdbc42.jar
+file.reference.jakarta.activation-api-2.0.1.jar=C:\\Users\\Asus TUF\\Documents\\lib\\jakarta.activation-api-2.0.1.jar
+file.reference.jakarta.mail-api-2.0.1.jar=C:\\Users\\Asus TUF\\Documents\\lib\\jakarta.mail-api-2.0.1.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\Asus TUF\\Documents\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\Asus TUF\\Documents\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jaxb-api-2.1.jar=C:\\Users\\Asus TUF\\Documents\\lib\\jaxb-api-2.1.jar
+file.reference.sqljdbc42.jar=C:\\Users\\Asus TUF\\Documents\\lib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
