--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.jakarta.activation-2.0.1.jar=C:\\Users\\Acer\\Downloads\\lib\\jakarta.activation-2.0.1.jar
 file.reference.jakarta.activation-api-2.0.1.jar=C:\\Users\\Acer\\Downloads\\lib\\lib\\jakarta.activation-api-2.0.1.jar
+file.reference.jakarta.mail-2.0.1.jar=C:\\Users\\Acer\\Downloads\\lib\\jakarta.mail-2.0.1.jar
 file.reference.jakarta.mail-api-2.0.1.jar=C:\\Users\\Acer\\Downloads\\lib\\lib\\jakarta.mail-api-2.0.1.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\Acer\\Downloads\\lib\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\Acer\\Downloads\\lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
@@ -47,7 +49,9 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.jakarta.mail-2.0.1.jar}:\
+    ${file.reference.jakarta.activation-2.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
