--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 
+file.reference.gson-2.11.0.jar=C:\\Users\\Acer\\Downloads\\lib\\gson-2.11.0.jar
 file.reference.jakarta.activation-2.0.1.jar=C:\\Users\\Acer\\Downloads\\lib\\jakarta.activation-2.0.1.jar
 file.reference.jakarta.activation-api-2.0.1.jar=C:\\Users\\Acer\\Downloads\\lib\\lib\\jakarta.activation-api-2.0.1.jar
 file.reference.jakarta.mail-2.0.1.jar=C:\\Users\\Acer\\Downloads\\lib\\jakarta.mail-2.0.1.jar
@@ -52,7 +53,8 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.gson-2.11.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
