--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -145,10 +145,12 @@
         <servlet-class>controller.AdminDashboard</servlet-class>
     </servlet>
     <servlet>
-
         <servlet-name>AdminViewAllRequest</servlet-name>
         <servlet-class>controller.AdminViewAllRequest</servlet-class>
-
+    </servlet>
+    <servlet>
+        <servlet-name>CreateHireRequest</servlet-name>
+        <servlet-class>controller.CreateHireRequest</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>ViewTop3Mentor</servlet-name>
@@ -295,9 +297,11 @@
         <url-pattern>/AdminDashboard</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-
         <servlet-name>AdminViewAllRequest</servlet-name>
         <url-pattern>/AdminViewAllRequest</url-pattern>
-
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CreateHireRequest</servlet-name>
+        <url-pattern>/CreateHireRequest</url-pattern>
     </servlet-mapping>
 </web-app>
