--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,16 +28,14 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 
-file.reference.gson-2.11.0-javadoc.jar=C:\\Users\\Acer\\Downloads\\lib\\gson-2.11.0-javadoc.jar
-file.reference.gson-2.11.0.jar=C:\\Users\\Acer\\Downloads\\lib\\gson-2.11.0.jar
-file.reference.jakarta.activation-2.0.1.jar=C:\\Users\\Acer\\Downloads\\lib\\jakarta.activation-2.0.1.jar
-file.reference.jakarta.activation-api-2.0.1.jar=C:\\Users\\Acer\\Downloads\\lib\\lib\\jakarta.activation-api-2.0.1.jar
-file.reference.jakarta.mail-2.0.1.jar=C:\\Users\\Acer\\Downloads\\lib\\jakarta.mail-2.0.1.jar
-file.reference.jakarta.mail-api-2.0.1.jar=C:\\Users\\Acer\\Downloads\\lib\\lib\\jakarta.mail-api-2.0.1.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\Acer\\Downloads\\lib\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\Acer\\Downloads\\lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jaxb-api-2.1.jar=C:\\Users\\Acer\\Downloads\\lib\\lib\\jaxb-api-2.1.jar
-file.reference.sqljdbc42.jar=C:\\Users\\Acer\\Downloads\\lib\\lib\\sqljdbc42.jar
+file.reference.gson-2.11.0-javadoc.jar=C:\\Users\\Asus TUF\\Documents\\lib\\lib\\gson-2.11.0-javadoc.jar
+file.reference.gson-2.11.0.jar=C:\\Users\\Asus TUF\\Documents\\lib\\lib\\gson-2.11.0.jar
+file.reference.jakarta.activation-api-2.0.1.jar=C:\\Users\\Asus TUF\\Documents\\lib\\lib\\jakarta.activation-api-2.0.1.jar
+file.reference.jakarta.mail-api-2.0.1.jar=C:\\Users\\Asus TUF\\Documents\\lib\\lib\\jakarta.mail-api-2.0.1.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\Asus TUF\\Documents\\lib\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\Asus TUF\\Documents\\lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jaxb-api-2.1.jar=C:\\Users\\Asus TUF\\Documents\\lib\\lib\\jaxb-api-2.1.jar
+file.reference.sqljdbc42.jar=C:\\Users\\Asus TUF\\Documents\\lib\\lib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,17 +45,15 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
+    ${libs.CopyLibs.classpath}:\
+    ${file.reference.gson-2.11.0-javadoc.jar}:\
+    ${file.reference.gson-2.11.0.jar}:\
     ${file.reference.jakarta.activation-api-2.0.1.jar}:\
     ${file.reference.jakarta.mail-api-2.0.1.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.gson-2.11.0-javadoc.jar}:\
-    ${file.reference.gson-2.11.0.jar}:\
-    ${file.reference.jakarta.activation-2.0.1.jar}:\
-    ${file.reference.jakarta.mail-2.0.1.jar}:\
-    ${libs.CopyLibs.classpath}
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
